definitions/ca/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibpca-deployment
spec:
  replicas: 1
  selector: {}
  strategy:
    type: Recreate
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - command:
            - sh
            - -c
            - mkdir -p /data/tlsca && cp /config/tlsca/fabric-ca-server-config.yaml /data/tlsca
              && mkdir -p /data/ca && cp /config/ca/fabric-ca-server-config.yaml /data/ca
              && fabric-ca-server start --home /data/ca
          image: ""
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: operations
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 5
          name: ca
          ports:
            - containerPort: 7054
              name: ca
            - containerPort: 9443
              name: operations
          readinessProbe:
            httpGet:
              path: /healthz
              port: operations
              scheme: HTTPS
            initialDelaySeconds: 26
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 1G
              memory: 4Gi
            requests:
              cpu: 100m
              ephemeral-storage: 100M
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 7051
          volumeMounts:
            - mountPath: /crypto/ca
              name: ca-crypto
            - mountPath: /crypto/tlsca
              name: tlsca-crypto
            - mountPath: /config/ca
              name: ca-config
            - mountPath: /config/tlsca
              name: tlsca-config
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 7051
        runAsNonRoot: true
        runAsUser: 7051
      serviceAccountName: sample
      volumes:
        - emptyDir:
            medium: Memory
          name: shared
